modificado na net

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,6 +6,6 @@
     <title>Robo Pratica</title>
 </head>
 <body>
-    <h1>Teste modificado na net</h1>
+    <h1>Teste modificado na net1</h1>
 </body>
 </html>
